dig-src/main/default/objects/Vote__c/Vote__c.object-meta.xml
<CustomObject>
    <label>Vote</label>
    <pluralLabel>Votes</pluralLabel>
    <nameField>
        <label>Vote Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>