dig-src/main/default/objects/Vote__c/fields/Cast_At__c.field-meta.xml
<CustomField>
    <fullName>Cast_At__c</fullName>
    <label>Cast At</label>
    <type>DateTime</type>
</CustomField>