dig-src/main/default/objects/Vote__c/fields/Motion__c.field-meta.xml
<CustomField>
    <fullName>Motion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Motion</label>
    <referenceTo>Motion__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>