dig-src/main/default/objects/Vote__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <label>Vote</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Abstain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>