dig-src/main/default/objects/Vote__c/fields/Voter_Membership__c.field-meta.xml
<CustomField>
    <fullName>Voter_Membership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Voter Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>